# actix-datastar-example

./: Cargo.toml  Justfile  README.md
src/: datastar_sse.rs  lib.rs  main.rs
